Handle Empty Image

--- a/courses.html
+++ b/courses.html
@@ -184,7 +184,7 @@
         <div class="owl-4-slider owl-carousel">
           <div class="item">
             <div class="video-media">
-              <img src="images/Img_1.jpg" alt="Image" class="img-fluid">
+              <img src="images/img_1.jpg" alt="Image" class="img-fluid">
               <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
                 <span class="icon mr-3">
                   <span class="icon-play"></span>
@@ -224,7 +224,7 @@
 
           <div class="item">
             <div class="video-media">
-              <img src="images/Img_1.jpg" alt="Image" class="img-fluid">
+              <img src="images/img_1.jpg" alt="Image" class="img-fluid">
               <a href="https://vimeo.com/139714818" class="d-flex play-button align-items-center" data-fancybox>
                 <span class="icon mr-3">
                   <span class="icon-play"></span>
@@ -472,7 +472,7 @@
         <div class="col-lg-6">
           <div class="custom-media d-flex">
             <div class="img mr-4">
-              <img src="images/Img_1.jpg" alt="Image" class="img-fluid">
+              <img src="images/img_1.jpg" alt="Image" class="img-fluid">
             </div>
             <div class="text">
               <span class="meta">May 20, 2020</span>
