--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
         <div class="col-lg-12 mb-4 mx-5">
           <div class="custom-media d-block">
             <div class="img mb-4">
-              <a href="single.html"><img src="images/Img_1.jpg" alt="Image" class="img-fluid"></a>
+              <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="text">
               <!-- <span class="meta">May 20, 2020</span>
@@ -156,7 +156,7 @@
         <div class="col-lg-4 mb-4">
           <div class="custom-media d-block">
             <div class="img mb-4">
-              <a href="single.html"><img src="images/Img_1.jpg" alt="Image" class="img-fluid"></a>
+              <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="text">
               <span class="meta">May 20, 2020</span>
@@ -183,7 +183,7 @@
         <div class="col-lg-4 mb-4">
           <div class="custom-media d-block">
             <div class="img mb-4">
-              <a href="single.html"><img src="images/Img_1.jpg" alt="Image" class="img-fluid"></a>
+              <a href="single.html"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
             </div>
             <div class="text">
               <span class="meta">May 20, 2020</span>
