--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
             <div class="text">
               <h3 class=""><a href="#">Air Vice Marshal Praveen Kumar (AVSM, VSM)</a></h3>
               <span class="meta">Commissioned: 07 Jan 1980</span>
-              <p>Group Captain Praveen Kumar (15970) Aeronautical Engineering (Mechanical) was commissioned on 07 Jan
+              <!-- <p>Group Captain Praveen Kumar (15970) Aeronautical Engineering (Mechanical) was commissioned on 07 Jan
                 1980 in the Engineering Branch of the IAF. During his distinguished service of 24 years he has spent a
                 long time in the field having worked in various capacities on the Gnats and MiG-29 aircraft. He has also
                 worked in 4 BRD as Chief of Quality Assurance and has held an important staff assignment at Air HQ. He
@@ -146,7 +146,7 @@
                 culture at the station.
 
                 For his distinguished service of high order, the Hon'ble President is pleased to award 'Vishisht Seva
-                Medal' to Group Captain Praveen Kumar.</p>
+                Medal' to Group Captain Praveen Kumar.</p> -->
               <span class="meta">Retired on 29 Feb 2016 Superannuated</span>
               <!-- <p><a href="#">Read more</a></p> -->
             </div>
