Handle Content in the site

--- a/courses.html
+++ b/courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SSB Mantra</title>
+  <title>SSB Crack Mantra</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -295,7 +295,23 @@
                     </div>
                   </div>
                 </div> -->
-
+                <div class="text-center widget-vs-contents mb-4">
+                  <h4>Coverage</h4>
+                  <p class="mb-5">
+                    <span class="d-block">Personality Development</span>
+                    <span class="d-block">Orating & Communication Skills</span>
+                    <span class="d-block">Group Tasks</span>
+                    <span class="d-block">Command Tasks</span>
+                    <span class="d-block">PI Strategy</span>
+                    <span class="d-block">Tips to Crack SSB</span>
+                    <span class="d-block">Practice & Mock Sessions</span>
+                    <span class="d-block">AFCAT, CDS & INET in Brief</span>
+                    <!-- <span class="d-block">December 20th, 2020</span> -->
+                    <!-- <span class="d-block">9:30 AM GMT+0</span>
+                      <strong class="text-primary">New Euro Arena</strong> -->
+                  </p>
+  
+                </div>
               <div class="text-center widget-vs-contents mb-4">
                 <h4>Preparation</h4>
                 <p class="mb-5">
