--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>SSB Mantra</title>
+  <title>SSB Crack Mantra</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -78,7 +78,10 @@
       <div class="container pt-5">
         <div class="row pt-5">
           <div class="col-lg-5 ml-auto">
-            <h1 class="text-white">SSB CRACK</h1>
+            <div class="">
+              <span class="text-white px-0">Opportunities don't happen. You create them.</span>
+          </div>
+            <h1 class="text-white">SSB CRACK MANTRA</h1>
             <p>We provides Written Test and SSB Preparation for all Armed force Exams (Army, Air Force & Navy)</p>
             <p>- Air Vice Marshal Praveen Kumar</p>
             <!-- <div id="date-countdown"></div> -->
@@ -439,7 +442,7 @@
     <div class="container site-section">
       <div class="row">
         <div class="col-12 title-section">
-          <h2 class="heading">"SSB CRACK - MENTORING & COACHING SESSIONS"</h2>
+          <h2 class="heading">"SSB CRACK MANTRA - MENTORING & COACHING SESSIONS"</h2>
         </div>
       </div>
       <div class="row">
