--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
             </div> -->
             <div class="text">
               <h3 class=""><a href="#">Air Vice Marshal Praveen Kumar (AVSM, VSM)</a></h3>
-              <span class="meta">Commissioned: 07 Jan 1980</span>
+              <p><span class="meta">Commissioned: 07 Jan 1980</span></p>
               <!-- <p>Group Captain Praveen Kumar (15970) Aeronautical Engineering (Mechanical) was commissioned on 07 Jan
                 1980 in the Engineering Branch of the IAF. During his distinguished service of 24 years he has spent a
                 long time in the field having worked in various capacities on the Gnats and MiG-29 aircraft. He has also
